--- a/src/main/resources/assets/gtmorehard/lang/en_US.lang
+++ b/src/main/resources/assets/gtmorehard/lang/en_US.lang
@@ -1,85 +1,2 @@
-textFrontBottom=Front bottom
-Tooltip_ICD_MachineType=Intensify Chemical Distorter/Chemical Reactor
-textAnyCasing=Any Casing
-StructureTooComplex=The structure is too complex!
-Tooltip_ICD_05=Focus on processing the most complex chemical reaction - 16x Parallel.
-Tooltip_ICD_06=§6Chemical Reactor mode: 
-textCasing=Casing
-Tooltip_ICD_03=Use screwdriver to change mode.
-Tooltip_ICD_04=§6Intensify Chemical Distorter mode: 
-Kelvin= K
-Tooltip_ICD_01=§bI! §9AM! §bTHE! §9CHEM! §bTHAT! §9IS! §bAPROOOOOACHING !!
-Tooltip_ICD_02=The most advanced base chemical reactor.
-NameIntensifyChemicalDistorter=Intensify Chemical Distorter
-Tooltip_ICD_00=Controller block for the Intensify Chemical Distorter
-textFrontCenter=Front center
-HeatCapacity=Heat Capacity: 
-BLUE_PRINT_INFO=Follow the§9 Structure§1Lib§7 hologram projector to build the main structure.
-Tooltip_ICD_07=1024 Parallel and 900%% faster than using LCR of the same voltage.
-bw.Testing Material.notTrans=Testing Material
-item.MetaItem01.0.name=Test Item 0
-item.MetaItem01.name=MetaItem01Base
-itemGroup.GTCM Meta Items 1=GTCM Meta Items 1
-itemGroup.GTCM Meta Blocks 1=GTCM Meta Blocks 1
-tooltips.TestItem0.line1=A test item, no use.
-blockBase01.MetaBlock01.name=MetaBlock01
-blockBase01.PhotonControllerUpgrade.name=Photon Controller Upgrade
-MetaBlock01.0.name=TestMetaBlock01_0
-PhotonControllerUpgrade.1.name=Photonic Intensifier Middle Tier
-itemGroup.GTCM=GTCM
-PhotonControllerUpgrade.name=Photon Controller Upgrade
-PhotonControllerUpgrade.0.name=Photonic Intensifier Low Tier
-PhotonControllerUpgrade.9.name=Photonic Intensifier UEV Tier
-PhotonControllerUpgrade.13.name=Photonic Intensifier MAX Tier
-PhotonControllerUpgrade.2.name=Photonic Intensifier HV Tier
-PhotonControllerUpgrade.6.name=Photonic Intensifier ZPM Tier
-PhotonControllerUpgrade.4.name=Photonic Intensifier IV Tier
-PhotonControllerUpgrade.11.name=Photonic Intensifier UMV Tier
-PhotonControllerUpgrade.7.name=Photonic Intensifier UV Tier
-PhotonControllerUpgrade.8.name=Photonic Intensifier UHV Tier
-PhotonControllerUpgrade.10.name=Photonic Intensifier UIV Tier
-PhotonControllerUpgrade.3.name=Photonic Intensifier EV Tier
-PhotonControllerUpgrade.5.name=Photonic Intensifier LuV Tier
-NamePreciseHighEnergyPhotonicQuantumMaster=Precise High-Energy Photonic Quantum Master
-PhotonControllerUpgrade.12.name=Photonic Intensifier UXV Tier
-textScrewdriverChangeMode=Use screwdriver to change mode.
-textCenterOfUDSides=Center area of up and down side
-textCasingAdvIrPlated=Advanced Iridium Plated Machine Casing
-textHighPowerCasingUDSides=High Power Casing area of up and down side
-textCasingTT_0=High Power Casing
-Tooltip_PhC_01=§9Prism tank in order, sir.
-Tooltip_PhC_00=Controller block for the Precise High-Energy Photonic Quantum Master
-Tooltip_PhC_MachineType=Photon Controller/Laser Engraver
-Tooltip_PhC_03=Install Photonic Intensifier on the back side of the structure to dramatically increase production speeds.
-Tooltip_PhC_02=Control Photons on the scale of 10¯¹² meters.
-Tooltip_PhC_04=Multi upgrade modules can be stacked. Also can be uninstalled. Replace using normal Casing.
-Tooltip_PhC_07=16x Parallel
-textUpgradeCasing=Upgrade module casing at backside area wrapped by AdvIrPlated Casing
-Tooltip_PhC_06=§6Photon Controller mode:
-textAroundController=Around the Controller
-Tooltip_PhC_09=256x Parallel | Extra reduce 50%% recipe time spent
-Tooltip_PhC_08=§6Laser Engraver mode:
-textCenterOfLRSides=Center area of left and right side
-PhotonControllerUpgradeUMV.tooltips.01=Extra 190%% Speed Up !
-PhotonControllerUpgradeMAX.tooltips.01=Extra 320%% Speed Up !
-PhotonControllerUpgradeUV.tooltips.01=Extra 40%% Speed Up !
-PhotonControllerUpgradeUiV.tooltips.01=Extra 140%% Speed Up !
-PhotonControllerUpgradeMAX.tooltips.02=Enable Perfect Overclock !
-PhotonControllerUpgradeLuV.tooltips.01=Extra 10%% Speed Up !
-PhotonControllerUpgradeUHV.tooltips.01=Extra 70%% Speed Up !
-PhotonControllerUpgradeUMV.tooltips.02=Enable Perfect Overclock !
-PhotonControllerUpgradeIV.tooltips.01=Extra 5%% Speed Up !
-PhotonControllerUpgradeUEV.tooltips.01=Extra 100%% Speed Up !
-PhotonControllerUpgradeEV.tooltips.01=Extra 4%% Speed Up !
-PhotonControllerUpgradeUXV.tooltips.02=Enable Perfect Overclock !
-PhotonControllerUpgradeHV.tooltips.01=Extra 3%% Speed Up !
-PhotonControllerUpgradeUXV.tooltips.01=Extra 250%% Speed Up !
-PhotonControllerUpgradeZPM.tooltips.01=Extra 20%% Speed Up !
-PhotonControllerUpgradeLV.tooltips.01=Extra 1%% Speed Up !
-PhotonControllerUpgradeMV.tooltips.01=Extra 2%% Speed Up !
-IntensifyChemicalDistorter.mode.0=Intensify Chemical Distorter mode
-IntensifyChemicalDistorter.mode.1=Chemical Reactor mode
-PreciseHighEnergyPhotonicQuantumMaster.mode.0=Laser Engraver mode
-PreciseHighEnergyPhotonicQuantumMaster.mode.1=Photon Controller mode
-item.MetaItem01.1.name=Space Warper
-tooltips.SpaceWarper.line1=§1Power of gravitation !
+item.MetaItem01.0.name=Test Item
+tile.MetaBlock01.0.name=Test Block
